samples/_failures_safe/1761612690_c5d012_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5c10cf5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f5c10cf5.c:178: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_f5c10cf5.c:177:5: error: expected declaration or statement at end of input
  177 |     for
      |     ^~~
